--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ pytz==2024.1
 python-dateutil==2.9.0.post0
 numpy==2.1.3
 pandas==2.2.3
-python-dotenv==1.0.1   # added for load_dotenv
+python-dotenv==1.0.1
+slack-sdk==3.30.0
